After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680283 - [0.11] flvdemux: push mode seeking breaks with gst_segment_to_running_time: assertion `segment->format == format' failed
[0.11] flvdemux: push mode seeking breaks with gst_segment_to_running_time: a...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Linux
: Normal major
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-19 20:25 UTC by Tim-Philipp Müller
Modified: 2012-07-23 11:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2012-07-19 20:25:06 UTC
totem pushfile:///home/tpm/samples/misc/Matrix_\ Reloaded\ -\ Trailer\ \(HD\ 720p\).flv

...

Guessing it's the same with any flv file and also with the playback-test example.
Comment 1 Tim-Philipp Müller 2012-07-20 17:07:30 UTC
Depends a bit on the file it seems. With another file it works fine 99% of the time, only got two of those warnings.

This doesn't seek properly, but goes back to 0 on seek, which also isn't right (but doesn't produce the segment warnings for me either):

  $ totem http://www.olearygoss.co.uk/videos/Coronation-Road.flv
Comment 2 Tim-Philipp Müller 2012-07-20 17:10:14 UTC
Argh, in totem that will enable download buffering of course, which is different.
Comment 3 Tim-Philipp Müller 2012-07-20 17:12:44 UTC
For the segment warnings:

   $ wget -P /tmp 'http://people.freedesktop.org/~tpm/samples/Matrix_%20Reloaded%20-%20Trailer%20(HD%20720p).flv'
  -base/tests/examples/playback$ ./playback-test 0 pushfile:///tmp/Matrix_\ Reloaded\ -\ Trailer\ \(HD\ 720p\).flv
Comment 4 Mark Nauwelaerts 2012-07-23 11:04:49 UTC
Following commit takes care of the warning:

commit 33091e2bf532750449866856eb44a6c6867702fd
Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk>
Date:   Mon Jul 23 12:39:05 2012 +0200

    flvdemux: clear old segment event when requesting new one

    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680283

Seeking in push mode in this particular file (or similar) will still lead to resuming playback at start since there is no index, and the way flvdemux handles push seeking, but that is another matter/enhancement.