flvdemux: clear old segment event when requesting new one

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680283